[package]
name = "rust-hello"
version = "0.1.0"
authors = ["Salvador Guzman <guzmansalv@gmail.com>"]
edition = "2018"

[[bin]]
name = "hello"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
# Force openssl-sys to staticly link in the openssl library. Necessary when
# # cross compiling to x86_64-unknown-linux-musl.
vendored = ["openssl-sys/vendored"]
